-issue#5279: Rebuild poller cache does not work as expected
-issue#5282: Script ss_host_cpu.php does not work as expected when on a remote data collector with hmib enabled
-issue#5283: Trying to access array offset on value of type null in file lib/functions.php on line: 2276
-issue#5291: Error thrown when imstalling packages
-issue#5298: Cacti cli plugin_manage.php mishandles the --plugin option
-feature: Upgrade billboard.js to version 3.7.4
-feature: Upgrade d3.js to version 7.8.2

1.2.24
-issue#5127: Importing Local_Linux_Machine.xml.gz template raises PHP error
-issue#5134: Display of "Memory Limit" on Boost Status page shows -1 and not "Unlimited"
-issue#5135: Error in using RRDcleaner an RRDcheck causing SQL errors
-issue#5136: Function number_format_i18n should return a valid number '0' for NULL input
-issue#5137: When attempting to update structured paths, SQL errors occur
-issue#5140: Cacti PHP 8.2 SNMP Errors with php-snmp Installed
-issue#5142: Correct issues with permission model including display of authorization UI elements and warnings
-issue#5143: When a Device has zero Graphs or Data Sources, it does not display the correct value
-issue#5147: Error 500 on apache when changing languages
-issue#5150: The Import Package cli script displays the wrong 'info' parameter
-issue#5151: Templates appear to lose their suggested name values
-issue#5155: Local Linux Machine Device Package Damaged
-issue#5159: Cannot turn on publishing when editing
-issue#5160: Translations on debian 'Bullseye' systems may cause server errors
-issue#5161: Switching language in the settings only becomes active after removal of session cookie
-issue#5166: Plugin permission is not shown in correct role section
-issue#5167: Graph template for NetSNMP lmsensors missing
-issue#5168: Import Package is misleading when reviewing Device Template Changes
-issue#5169: Host table status_fail_date and Status_rec_date can appear wrong