@@ -552,7 +552,9 @@ function find_best_path($binary_name) {
 function install_setup_get_templates() {
 	global $config;
 
-	@ini_set('zlib.output_compression', '0');
+	if (CACTI_WEB) {
+		ini_set('zlib.output_compression', '0');
+	}
 
 	$templates = array(
 		'Apache_Webserver.xml.gz',
