@@ -77,6 +77,8 @@ Cacti CHANGELOG
 -issue#5283: Trying to access array offset on value of type null in file lib/functions.php on line: 2276
 -issue#5291: Error thrown when imstalling packages
 -issue#5298: Cacti cli plugin_manage.php mishandles the --plugin option
+-issue#5299: QA: Cacti automated install throwing error message
+-issue#5300: QA: When performing automated plugin install via plugin_manage.php warnings are thrown
 -feature: Upgrade billboard.js to version 3.7.4
 -feature: Upgrade d3.js to version 7.8.2
 
